My Second Version

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 
 # auto generated wildcard
 gen/db/.env
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
 node_modules
-gen
+gen  
