--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ gen/db/.env
     default-env.json
 node_modules
 gen  
+
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
