--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ gen
     # added by cds deploy
     default-env.json
     
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
