--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
         "express": "^4",
         "hdb": "^0.18.3"
     },
-    "devDependencies": {
-       
-    },
+    "devDependencies": {},
     "scripts": {
         "start": "cds run"
     },
