--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 
 # auto generated wildcard
-gen/db/.env
-load_modules
-gen
+db/.env
 node_modules
-
-    # added by cds deploy
-    default-env.json
-    
+gen
     # added by cds deploy
     default-env.json
     
