--- a/mta.yaml
+++ b/mta.yaml
@@ -21,7 +21,7 @@ modules:
   - name: mypocapapp-srv
     # ------------------------------------------------------------
     type: nodejs
-    path: gen/srv
+    path: srv
     parameters:
       buildpack: nodejs_buildpack
     build-parameters:
@@ -38,7 +38,7 @@ modules:
   - name: mypocapapp-db-deployer
     # ------------------------------------------------------------
     type: hdb
-    path: gen/db
+    path: db
     parameters:
       buildpack: nodejs_buildpack
     requires:
