After exposing Calcualtion Views

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,16 @@ gen
     # added by cds deploy
     default-env.json
     
+
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
