--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,36 @@ gen
     # added by cds deploy
     default-env.json
     
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
+    # added by cds deploy
+    default-env.json
+    
